# fileshare-tauri

./: .gitignore  package-lock.json  package.json
proto/: fileshare.proto
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/proto/: fileshare.proto
src-tauri/src/: lib.rs  main.rs
src-tauri/src/fileshare/: mod.rs
src-tauri/src/loader/: jumper.rs  mod.rs  serial.rs
src-tauri/src/util/: mod.rs
