[package]
name = "fileshare"
version = "0.1.0"
description = "fileshare with tauri"
authors = ["chanmaoganda"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fileshare_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = { version = "0.13.1", features = ["prost"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = { git = "https://github.com/hyperium/tonic.git", version = "0.14" }
anyerror = "0.1.13"
anyhow = "1.0.98"
sha2 = "0.10.9"
hex = "0.4.3"
prost = "0.14"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
